# Phantom

./: .gitignore  CMakeLists.txt  Phantom.cpp  Phantom.h  README.md
.github/workflows/: cmake.yml
src/: Phantom.cpp  Phantom.h  Platform.h  UDP.cpp  UDP.h  library.cpp  library.h
src/cheats/: AimAssist.cpp  AimAssist.h  AimBot.cpp  AimBot.h  AutoClicker.cpp  AutoClicker.h  Cheat.cpp  Cheat.h  Clip.cpp  Clip.h  FastPlace.cpp  FastPlace.h  HitBox.cpp  HitBox.h  HitDelayFix.cpp  HitDelayFix.h  Hitbox.cpp  Hitbox.h  Reach.cpp  Reach.h  ReverseHitbox.cpp  ReverseHitbox.h  STap.cpp  STap.h  Speed.cpp  Speed.h  VClip.cpp  VClip.h  Velocity.cpp  Velocity.h
src/mapping/: AbstractClass.cpp  AbstractClass.h  CM.h  Mapping.cpp  Mapping.h  Mem.h
src/mapping/impl/: AxisAlignedBB.cpp  AxisAlignedBB.h  Entity.cpp  Entity.h  EntityLivingBase.h  EntityPlayer.cpp  EntityPlayer.h  EntityPlayerSP.cpp  EntityPlayerSP.h  GameSettings.h  JavaList.cpp  JavaList.h  JavaPrintStream.cpp  JavaPrintStream.h  JavaSet.cpp  JavaSet.h  JavaSystem.cpp  JavaSystem.h  KeyBinding.cpp  KeyBinding.h  Minecraft.cpp  Minecraft.h  Mouse.cpp  Mouse.h  Vec3.cpp  Vec3.h  WorldClient.cpp  WorldClient.h
src/mapping/impl/java/io/: JavaPrintStream.cpp  JavaPrintStream.h
src/mapping/impl/java/lang/: JavaSystem.cpp  JavaSystem.h
src/mapping/impl/java/util/: JavaList.cpp  JavaList.h  JavaSet.cpp  JavaSet.h
src/mapping/impl/net/minecraft/client/: Minecraft.cpp  Minecraft.h
src/mapping/impl/net/minecraft/client/multiplayer/: PlayerControllerMP.cpp  PlayerControllerMP.h  WorldClient.cpp  WorldClient.h
src/mapping/impl/net/minecraft/client/renderer/: EntityRenderer.cpp  EntityRenderer.h
src/mapping/impl/net/minecraft/client/settings/: GameSettings.cpp  GameSettings.h  KeyBinding.cpp  KeyBinding.h
src/mapping/impl/net/minecraft/entity/: Entity.cpp  Entity.h  EntityLivingBase.cpp  EntityLivingBase.h  EntityPlayerSP.cpp  EntityPlayerSP.h
src/mapping/impl/net/minecraft/entity/player/: EntityPlayer.cpp  EntityPlayer.h
src/mapping/impl/net/minecraft/util/: AxisAlignedBB.cpp  AxisAlignedBB.h  MovingObjectPosition.cpp  MovingObjectPosition.h  Timer.cpp  Timer.h  Vec3.cpp  Vec3.h
src/mapping/impl/org/lwjgl/input/: Mouse.cpp  Mouse.h
src/ui/: KeyManager.cpp  KeyManager.h  PhantomWindow.cpp  PhantomWindow.h  Window.cpp  Window.h
src/utils/: ImGuiUtils.cpp  ImGuiUtils.h  JvmUtils.cpp  JvmUtils.h  MCUtils.cpp  MCUtils.h  MSTimer.cpp  MSTimer.h  MathHelper.cpp  MathHelper.h  MiscUtils.cpp  MiscUtils.h  XUtils.cpp  XUtils.h
